[#651] Fix resources bar alignemt

--- a/frontend/src/modules/knowledge-library/styles.scss
+++ b/frontend/src/modules/knowledge-library/styles.scss
@@ -649,7 +649,9 @@
     .ant-page-header-back {
       margin-right: 10px;
     }
-
+    .invisible-content {
+      min-height: 18.75px;
+    }
     .result-number {
       line-height: 16px;
       color: #181818;
